...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfO-Bn-wlv">
                                        <rect key="frame" x="0.0" y="0.0" width="138.5" height="138.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="numberButton"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="70"/>
                                        <state key="normal" title="0" backgroundImage="button_border">
...
                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Twy-ZC-AUJ">
                                        <rect key="frame" x="149.5" y="0.0" width="138.5" height="138.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fizzButton"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="70"/>
                                        <state key="normal" image="champagne" backgroundImage="button_border">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uAk-io-FD8">
                                        <rect key="frame" x="0.0" y="149.5" width="138.5" height="138.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buzzButton"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="70"/>
                                        <state key="normal" image="lightning" backgroundImage="button_border">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vSw-Id-t4X">
                                        <rect key="frame" x="149.5" y="149.5" width="138.5" height="138.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fizzBuzzButton"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="70"/>
                                        <state key="normal" image="space" backgroundImage="button_border">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCw-sh-cwY">
                                <rect key="frame" x="205" y="420" width="99" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="paButton"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <state key="normal" title="Play Again">
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zr8-fo-yOP">
                                <rect key="frame" x="128" y="28" width="12" height="28"/>
                                <accessibility key="accessibilityConfiguration" identifier="highScoreLabel"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4Z-sQ-YAk">
                                <rect key="frame" x="255" y="32" width="49" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="resetButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="20" id="s49-dB-Jm3"/>
...
